# apicadabri

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/apicadabri/: __init__.py
test/: profile_bulk_get.py  test_arbitrary.py  test_map.py  test_multi_url.py  test_progress.py  test_retry.py
