[project]
name = "apicadabri"
version = "0.1.0"
description = "Magical tools to interact with APIs from a data scientist's perspective."
readme = "README.md"
authors = [
    { name = "Christopher Schölzel", email = "christopher.schoelzel@mailbox.org" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.14",
    "asyncio>=3.4.3",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
